force-app/main/default/objects/Replay_Check__c/Replay_Check__c.object-meta.xml
<CustomObject>
    <description>The result of applying one policy rule to one audit case during historical replay. Replaces old Rule_Check__c.</description>
    <label>Replay Check</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replay Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>