force-app/main/default/objects/Replay_Check__c/fields/Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value__c</fullName>
    <label>Actual Value</label>
    <type>Text</type>
    <length>100</length>
    <description>Value from borrower snapshot (null if unverifiable)</description>
</CustomField>