force-app/main/default/objects/Replay_Check__c/fields/Borrower_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fact snapshot used for evaluation</description>
    <label>Borrower Snapshot</label>
    <referenceTo>Borrower_Snapshot__c</referenceTo>
    <relationshipLabel>Replay Checks</relationshipLabel>
    <relationshipName>Replay_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>