force-app/main/default/objects/Replay_Check__c/fields/Evidence_Item__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Item__c</fullName>
    <label>Evidence Item</label>
    <type>Lookup</type>
    <referenceTo>Evidence_Item__c</referenceTo>
    <relationshipName>Replay_Checks</relationshipName>
    <relationshipLabel>Replay Checks</relationshipLabel>
    <description>Supporting evidence document</description>
</CustomField>