force-app/main/default/objects/Replay_Check__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <description>Threshold from the policy rule</description>
    <label>Expected Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>