force-app/main/default/objects/Replay_Check__c/fields/Policy_Rule__c.field-meta.xml
<CustomField>
    <fullName>Policy_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The rule being evaluated</description>
    <label>Policy Rule</label>
    <referenceTo>Policy_Rule__c</referenceTo>
    <relationshipLabel>Replay Checks</relationshipLabel>
    <relationshipName>Replay_Checks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>