force-app/main/default/objects/Replay_Check__c/fields/Replay_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Replay_Timestamp__c</fullName>
    <label>Replay Timestamp</label>
    <type>DateTime</type>
    <required>true</required>
    <description>When the replay was executed</description>
</CustomField>