force-app/main/default/objects/Replay_Check__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Denormalized rule name for display</description>
    <label>Rule Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>